Updated github link

--- a/website/db_site/templates/home.html
+++ b/website/db_site/templates/home.html
@@ -129,7 +129,7 @@
 		</h4>
 		<hr>
 		<p>
-			<a href="https://github.com/isblab/stridr_disobind">
+			<a href="https://github.com/isblab/stridr">
 				<img src="{% static 'Github.png' %}" class="data-img">
 			</a>
 <!-- 			<a href="">
